fixed css layout bug

--- a/client/assets/scss/layouts/main.scss
+++ b/client/assets/scss/layouts/main.scss
@@ -77,3 +77,11 @@ header, footer {
   margin: 0px auto;
 }
 
+.details-main {
+	.help-block {
+		margin: 20px;
+		padding: 10px 5px;
+	}
+}
+
+
